--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -13,6 +13,7 @@ jobs:
         run: npm run test
   lint:      
     runs-on: ubuntu-latest
+    needs: test
     steps:
       - name: Get the repository code
       # run: echo
@@ -23,6 +24,8 @@ jobs:
         run: npm run lint
   build:
     runs-on: ubuntu-latest
+    needs: lint
+    
     steps:
       - name: Get the repository code
       # run: echo
