--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -1,7 +1,7 @@
 name: Deploy React APP
 on: push
 jobs:
-  test:
+  deploy:
     runs-on: ubuntu-latest
     steps:
       - name: Get the repository code
@@ -11,27 +11,8 @@ jobs:
         run: npm i
       - name: Test application
         run: npm run test
-  lint:      
-    runs-on: ubuntu-latest
-    needs: test
-    steps:
-      - name: Get the repository code
-      # run: echo
-        uses: actions/checkout@v3
-      - name: Install dependecies
-        run: npm i
       - name: Lint application
         run: npm run lint
-  build:
-    runs-on: ubuntu-latest
-    needs: lint
-    
-    steps:
-      - name: Get the repository code
-      # run: echo
-        uses: actions/checkout@v3
-      - name: Install dependecies
-        run: npm i
       - name: Build application
         run: npm run build
       - name: Deploy
