--- a/.github/workflows/env.yml
+++ b/.github/workflows/env.yml
@@ -8,14 +8,14 @@ env:
 jobs:
   build:
     runs-on: ubuntu-latest
-    step:
+    steps:
       - name: Print Env Build
         run:
           echo "${{ env.NODE_ENV }}"
           echo "${{ env.GH_SECRET }}"
   deploy:
     runs-on: ubuntu-latest
-    step:
+    steps:
       - name: Print Env Deploy
         run:
           echo "${{ env.NODE_ENV }}"
